kubernetes/apps/questboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: questboard
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`questboard.home.mcnees.me`)
      kind: Rule
      services:
        - name: questboard
          port: 8099
  tls:
    secretName: legacy-home-wildcard-tls
